force-app/main/default/objects/sked_Drive__c/fields/is_Shift_Start_or_End_Different__c.field-meta.xml
<CustomField>
    <fullName>is_Shift_Start_or_End_Different__c</fullName>
    <description>Checks whether shift start/end timings and drive start/end timings are different</description>
    <formula>AND(sked_Drive_Date__c &gt;= TODAY(), NOT(ISPICKVAL(sked_Status__c , &#39;Cancel&#39;)),
OR ((sked_Start_Time__c != Min_Shift_Draw_Start__c) , ( sked_End_Time__c != Max_Shift_Draw_End__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Shift Start or End Different</label>
    <type>Checkbox</type>
</CustomField>