force-app/main/default/objects/sked_Drive__c/fields/Max_Role_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Role_Capacity__c</fullName>
    <label>Max Role Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>