force-app/main/default/objects/sked_Drive__c/fields/Max_Role_Capacity_With_Draw_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Role_Capacity_With_Draw_Hours__c</fullName>
    <label>Max Role Capacity With Draw Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>