force-app/main/default/objects/sked_Drive__c/fields/Max_Shift_Draw_End__c.field-meta.xml
<CustomField>
    <fullName>Max_Shift_Draw_End__c</fullName>
    <label>Max Shift Draw End</label>
    <summarizedField>sked_Drive_Shift__c.sked_End_Time__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>