force-app/main/default/objects/sked_Drive__c/fields/Min_Shift_Draw_Start__c.field-meta.xml
<CustomField>
    <fullName>Min_Shift_Draw_Start__c</fullName>
    <label>Min Shift Draw Start</label>
    <summarizedField>sked_Drive_Shift__c.sked_Start_Time__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>