force-app/main/default/objects/sked_Drive__c/fields/Site_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Building_Name__c</fullName>
    <description>added this formula field so we can use it from a &quot;drives on calendar history report&quot;.  The history report doesn&#39;t have the ability to pull in fields from related objects and thus the need for this field on this object.</description>
    <formula>sked_Opportunity__r.Site_Building_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Building Name</label>
    <type>Text</type>
</CustomField>