force-app/main/default/objects/sked_Drive__c/fields/site_External_Id__c.field-meta.xml
<CustomField>
    <fullName>site_External_Id__c</fullName>
    <label>Site External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>