force-app/main/default/objects/sked_Drive__c/fields/sked_2RBC_Projected_Procedures__c.field-meta.xml
<CustomField>
    <fullName>sked_2RBC_Projected_Procedures__c</fullName>
    <defaultValue>0</defaultValue>
    <label>2RBC Projected Procedures</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>