force-app/main/default/objects/sked_Drive__c/fields/sked_Account_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Account_Operation_Type__c</fullName>
    <formula>TEXT(sked_Account__r.Operation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Operation Type</label>
    <type>Text</type>
</CustomField>