force-app/main/default/objects/sked_Drive__c/fields/sked_actual_african_amrcn_cnt__c.field-meta.xml
<CustomField>
    <fullName>sked_actual_african_amrcn_cnt__c</fullName>
    <label>AA Units Collected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>