force-app/main/default/objects/sked_Drive__c/fields/sked_actual_operational_efficiency__c.field-meta.xml
<CustomField>
    <fullName>sked_actual_operational_efficiency__c</fullName>
    <formula>sked_actual_total_units_collected__c/sked_Total_Products_Projected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>