force-app/main/default/objects/sked_Drive__c/fields/sked_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Waiting for DM Approval</fullName>
            </value>
            <value>
                <fullName>DM Waiting for DRD Feedback</fullName>
            </value>
            <value>
                <fullName>Waiting for APS Approval</fullName>
            </value>
            <value>
                <fullName>APS Waiting for DRD Feedback</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Waiting for AP&amp;S Approval</fullName>
                <isActive>false</isActive>
                <label>Waiting for AP&amp;S Approval</label>
            </value>
            <value>
                <fullName>Waiting for DRD Feedback</fullName>
                <isActive>false</isActive>
                <label>Waiting for DRD Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>