force-app/main/default/objects/sked_Drive__c/fields/sked_APT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_APT_Quantity__c</fullName>
    <description>Created as part of HRP-13190</description>
    <label>APT Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>