force-app/main/default/objects/sked_Drive__c/fields/sked_ARC_Region_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_ARC_Region_ID__c</fullName>
    <formula>CASESAFEID(sked_District__r.sked_Parent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARC Region ID</label>
    <type>Text</type>
</CustomField>