force-app/main/default/objects/sked_Drive__c/fields/sked_Assigned_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Assigned_Staff_Count__c</fullName>
    <label>Assigned Staff Count</label>
    <summarizedField>sked_Drive_Shift__c.sked_Assigned_Staff_Count__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>