force-app/main/default/objects/sked_Drive__c/fields/sked_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>