force-app/main/default/objects/sked_Drive__c/fields/sked_CO_Time_Block_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_CO_Time_Block_Count__c</fullName>
    <description>HRP-15704 New formula field to get the number of Time blocks associated to a Collection Operation.</description>
    <formula>sked_Collection_Operation__r.sked_Time_Block_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Operation Time Block Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>