force-app/main/default/objects/sked_Drive__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Drives on Calendar</relationshipLabel>
    <relationshipName>sked_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>