force-app/main/default/objects/sked_Drive__c/fields/sked_Contention_Resolution__c.field-meta.xml
<CustomField>
    <fullName>sked_Contention_Resolution__c</fullName>
    <label>Contention Resolution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elect to overbook staff</fullName>
            </value>
            <value>
                <fullName>Elect to overbook drives</fullName>
            </value>
            <value>
                <fullName>Elect to overbook 2RBC</fullName>
            </value>
            <value>
                <fullName>Elect to overbook CDL</fullName>
            </value>
            <value>
                <fullName>Elect to overbook DOT</fullName>
            </value>
            <value>
                <fullName>Elect to run drive outside of Operational Hours</fullName>
            </value>
            <value>
                <fullName>Elect to use a vehicle with insufficient capacity</fullName>
            </value>
            <value>
                <fullName>Use rental vehicles</fullName>
            </value>
            <value>
                <fullName>Elect to approve the drive that is submitted within 42 days</fullName>
            </value>
            <value>
                <fullName>Elect to approve the drive that is confirmed within 42 days</fullName>
            </value>
            <value>
                <fullName>Elect to acknowledge the drive that is part of Linked Drive</fullName>
            </value>
            <value>
                <fullName>Elect to acknowledge the drive that is multi shift drive</fullName>
            </value>
            <value>
                <fullName>Elect to acknowledge dual role removal</fullName>
            </value>
            <value>
                <fullName>Accept New Staffing Complement</fullName>
            </value>
            <value>
                <fullName>Keep Current Staffing Complement</fullName>
            </value>
            <value>
                <fullName>Remove from Linked Drive</fullName>
            </value>
            <value>
                <fullName>Elect to acknowledge the drive has assets that are not shared with new Collection Operation</fullName>
            </value>
            <value>
                <fullName>Elect to Proceed with Excess Staff Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>