force-app/main/default/objects/sked_Drive__c/fields/sked_Date_to_Confirm__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_to_Confirm__c</fullName>
    <formula>sked_Drive_Date__c - $Setup.sked_Admin_Setting__c.sked_Admin_Days_to_Confirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date to Confirm</label>
    <type>Date</type>
</CustomField>