force-app/main/default/objects/sked_Drive__c/fields/sked_Dispatched_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Dispatched_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatched By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Dispatched_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>