force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Date__c</fullName>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>