force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Dispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drive Dispatched</label>
    <type>Checkbox</type>
</CustomField>