force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_External_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Drive External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>