force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Operation_Type__c</fullName>
    <formula>IF ( ISPICKVAL(sked_Type_of_Drive__c, &apos;Fixed Site&apos;) &amp;&amp; sked_Operation_Type__c == &apos;Non Integrated WB&apos;, &apos;NIFS&apos;, TEXT(sked_Type_of_Drive__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Operation Type</label>
    <type>Text</type>
</CustomField>