force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Owner__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Drives1</relationshipName>
    <type>Lookup</type>
</CustomField>