force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Productivity_Banding__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Productivity_Banding__c</fullName>
    <formula>/*HRP-10892 - Replacing the below hard coded formula to be more dynamic */
/*IF (sked_Drive_Productivity_Planned__c &lt; 0.6, IMAGE(&quot;/resource/sked_HLT_Dist/images/Red.png&quot;, &quot;Red&quot;, 25, 92), 
IF (sked_Drive_Productivity_Planned__c &lt; 0.8, IMAGE(&quot;/resource/sked_HLT_Dist/images/Amber.png&quot;, &quot;Amber&quot;, 25, 92), 
         IMAGE(&quot;/resource/sked_HLT_Dist/images/Green.png&quot;, &quot;Green&quot;, 25, 92))) */

/*IF (sked_Drive_Productivity_Planned__c &lt; sked_Collection_Operation__r.sked_Territory__r.sked_Mid_Drive_Productivity_Threshold__c, IMAGE(&quot;/resource/sked_HLT_Dist/images/Red.png&quot;, &quot;Red&quot;, 25, 92),
IF (sked_Drive_Productivity_Planned__c &lt; sked_Collection_Operation__r.sked_Territory__r.sked_High_Drive_Productivity_Threshold__c, IMAGE(&quot;/resource/sked_HLT_Dist/images/Amber.png&quot;, &quot;Amber&quot;, 25, 92),
IMAGE(&quot;/resource/sked_HLT_Dist/images/Green.png&quot;, &quot;Green&quot;, 25, 92))) */
IF (sked_Drive_Productivity_Planned__c &lt; sked_District__r.sked_Mid_Drive_Productivity_Threshold__c, IMAGE(&quot;/resource/sked_HLT_Dist/images/Red.png&quot;, &quot;Red&quot;, 25, 92),
IF (sked_Drive_Productivity_Planned__c &lt; sked_District__r.sked_High_Drive_Productivity_Threshold__c, IMAGE(&quot;/resource/sked_HLT_Dist/images/Amber.png&quot;, &quot;Amber&quot;, 25, 92),
IMAGE(&quot;/resource/sked_HLT_Dist/images/Green.png&quot;, &quot;Green&quot;, 25, 92)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Productivity Banding</label>
    <type>Text</type>
</CustomField>