force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Productivity_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Productivity_Scheduled__c</fullName>
    <label>Drive Productivity (Scheduled)</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>