force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Shift_2RBC_Procedures__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift_2RBC_Procedures__c</fullName>
    <label>Drive Shift 2RBC Procedures</label>
    <summarizedField>sked_Drive_Shift__c.sked_2RBC_Projected_Procedures__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>