force-app/main/default/objects/sked_Drive__c/fields/sked_Drive_Site__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive Site</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipName>sked_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>