force-app/main/default/objects/sked_Drive__c/fields/sked_Dual_Roles_Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>sked_Dual_Roles_Auto_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HRP-13862</description>
    <label>Dual Roles Auto Generated</label>
    <type>Checkbox</type>
</CustomField>