force-app/main/default/objects/sked_Drive__c/fields/sked_End_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Time_Offset__c</fullName>
    <formula>TIMEVALUE(TEXT(sked_Collection_Operation__r.sked_End_Time_Offset__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time Offset</label>
    <type>Time</type>
</CustomField>