force-app/main/default/objects/sked_Drive__c/fields/sked_Event_Published__c.field-meta.xml
<CustomField>
    <fullName>sked_Event_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Published</label>
    <type>Checkbox</type>
</CustomField>