force-app/main/default/objects/sked_Drive__c/fields/sked_Geo_To_From_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Geo_To_From_Key__c</fullName>
    <formula>LEFT(TEXT(ROUND(sked_Drive_Site__r.sked__GeoLocation__Latitude__s, 6)) + &#39;000000&#39;, FIND(&#39;.&#39;, TEXT(ROUND(sked_Drive_Site__r.sked__GeoLocation__Latitude__s, 6))) + 6)
&amp; &#39; &#39;
&amp; LEFT(TEXT(ROUND(sked_Drive_Site__r.sked__GeoLocation__Longitude__s, 6)) + &#39;000000&#39;, FIND(&#39;.&#39;, TEXT(ROUND(sked_Drive_Site__r.sked__GeoLocation__Longitude__s, 6))) + 6)
&amp; &#39;:&#39;
&amp; LEFT(TEXT(ROUND(sked_Staging_Location__r.sked_GeoLocation__Latitude__s, 6)) + &#39;000000&#39;, FIND(&#39;.&#39;, TEXT(ROUND(sked_Staging_Location__r.sked_GeoLocation__Latitude__s, 6))) + 6)
&amp; &#39; &#39;
&amp; LEFT(TEXT(ROUND(sked_Staging_Location__r.sked_GeoLocation__Longitude__s, 6)) + &#39;000000&#39;, FIND(&#39;.&#39;, TEXT(ROUND(sked_Staging_Location__r.sked_GeoLocation__Longitude__s, 6))) + 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo To From Key</label>
    <type>Text</type>
</CustomField>