force-app/main/default/objects/sked_Drive__c/fields/sked_Has_Exception__c.field-meta.xml
<CustomField>
    <fullName>sked_Has_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Exception?</label>
    <type>Checkbox</type>
</CustomField>