force-app/main/default/objects/sked_Drive__c/fields/sked_has_TimeBlock_Violation__c.field-meta.xml
<CustomField>
    <fullName>sked_has_TimeBlock_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there is any issue with timeblocks, for any of the drive shifts under this drive.</description>
    <label>Has TimeBlock Violation</label>
    <type>Checkbox</type>
</CustomField>