force-app/main/default/objects/sked_Drive__c/fields/sked_Historical_Registered_Donors__c.field-meta.xml
<CustomField>
    <fullName>sked_Historical_Registered_Donors__c</fullName>
    <label>Historical Registered Donors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>