force-app/main/default/objects/sked_Drive__c/fields/sked_IMPACT__c.field-meta.xml
<CustomField>
    <fullName>sked_IMPACT__c</fullName>
    <formula>(sked_Collection_Operation__r.sked_IMPACT_Start_Date__c != NULL || sked_Collection_Operation__r.sked_IMPACT_End_Date__c != NULL)
&amp;&amp; ((sked_Collection_Operation__r.sked_IMPACT_Start_Date__c == NULL || sked_Collection_Operation__r.sked_IMPACT_Start_Date__c &lt;= sked_Drive_Date__c)
&amp;&amp; (sked_Collection_Operation__r.sked_IMPACT_End_Date__c == NULL || sked_Collection_Operation__r.sked_IMPACT_End_Date__c &gt;= sked_Drive_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMPACT</label>
    <type>Checkbox</type>
</CustomField>