force-app/main/default/objects/sked_Drive__c/fields/sked_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Initiated_By__c</fullName>
    <label>Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked_Type_of_Drive__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC_Initiated_Mobile</fullName>
                <label>ARC Initiated-Mobile</label>
            </value>
            <value>
                <fullName>Sponsor_Initiated_Mobile</fullName>
                <label>Sponsor Initiated-Mobile</label>
            </value>
            <value>
                <fullName>ARC Initiated-Fixed</fullName>
            </value>
            <value>
                <fullName>Sponsor Initiated-Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>