force-app/main/default/objects/sked_Drive__c/fields/sked_Is_Drive_Name_Mismatched__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Drive_Name_Mismatched__c</fullName>
    <description>Created as part of HRP-15876</description>
    <formula>Name &lt;&gt;
IF(
    LEN(
        IF(
            NOT(ISNULL(sked_Account__c)),
            sked_Account__r.Name,
            &quot;&quot;
        ) &amp;
        &quot;, &quot; &amp;
        IF(
            NOT(ISNULL(sked_Drive_Site__c)),
            sked_Drive_Site__r.Name,
            &quot;&quot;
        )
    ) &gt; 80,

    LEFT(
        IF(
            NOT(ISNULL(sked_Account__c)),
            sked_Account__r.Name,
            &quot;&quot;
        ) &amp;
        &quot;, &quot; &amp;
        IF(
            NOT(ISNULL(sked_Drive_Site__c)),
            sked_Drive_Site__r.Name,
            &quot;&quot;
        ),
        75
    ) &amp; &quot; ...&quot;,

    IF(
        NOT(ISNULL(sked_Account__c)),
        sked_Account__r.Name,
        &quot;&quot;
    ) &amp;
    &quot; &quot; &amp;
    IF(
        NOT(ISNULL(sked_Drive_Site__c)),
        sked_Drive_Site__r.Name,
        &quot;&quot;
    )
)</formula>
    <label>Is Drive Name Mismatched?</label>
    <type>Checkbox</type>
</CustomField>