force-app/main/default/objects/sked_Drive__c/fields/sked_Is_Logistic_Different__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Logistic_Different__c</fullName>
    <formula>sked_Drive_Date__c &gt;= TODAY()
&amp;&amp; (sked_Drive_Date__c != sked_Opportunity__r.Drive_Date__c
|| sked_Start_Time__c != sked_Opportunity__r.Start_Time__c
|| sked_End_Time__c != sked_Opportunity__r.End_Time__c
|| sked_Projected_Registered_Donors__c != sked_Opportunity__r.Anticipated_Registered_Donors__c
|| sked_2RBC_Projected_Procedures__c != sked_Opportunity__r.X2RBC_Projected_Procedures__c
|| sked_Plasma_Projected_Procedures__c != sked_Opportunity__r.Plasma_Pheresis_Projected_Procedures__c
|| sked_Platelet_Projected_Procedures__c != sked_Opportunity__r.Platelet_Projected_Procedures__c
|| sked_WB_Projected_Procedures__c != sked_Opportunity__r.WB_Projected_Procedures__c
|| sked_Drive_Site__c != sked_Opportunity__r.Drive_Site__c
|| IF(ISPICKVAL(sked_Type_of_Drive__c , &#39;Mobile&#39;) || sked_Operation_Type__c == &#39;Non Integrated WB&#39;, false,
sked_Number_of_2RBC_Assets__c != sked_Opportunity__r.Number_of_2RBC_Assets__c
|| sked_Number_of_Plasma_Assets__c != sked_Opportunity__r.Number_of_Plasma_Assets__c
|| sked_Number_of_Platelet_Assets__c != sked_Opportunity__r.Number_of_Platelet_Assets__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Logistic Different</label>
    <type>Checkbox</type>
</CustomField>