force-app/main/default/objects/sked_Drive__c/fields/sked_Linked_Drives__c.field-meta.xml
<CustomField>
    <fullName>sked_Linked_Drives__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Drives</label>
    <referenceTo>sked_Linked_Drives__c</referenceTo>
    <relationshipLabel>Drives on Calendar</relationshipLabel>
    <relationshipName>sked_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>