force-app/main/default/objects/sked_Drive__c/fields/sked_Lock_Lunch_Break__c.field-meta.xml
<CustomField>
    <fullName>sked_Lock_Lunch_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Lunch Break</label>
    <type>Checkbox</type>
</CustomField>