force-app/main/default/objects/sked_Drive__c/fields/sked_Market__c.field-meta.xml
<CustomField>
    <fullName>sked_Market__c</fullName>
    <description>Formula field to show Account.Market</description>
    <formula>sked_Account__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to show Acccount.Market</inlineHelpText>
    <label>Market</label>
    <type>Text</type>
</CustomField>