force-app/main/default/objects/sked_Drive__c/fields/sked_Max_Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Shift_End_Time__c</fullName>
    <label>Max Shift End Time</label>
    <type>Time</type>
</CustomField>