force-app/main/default/objects/sked_Drive__c/fields/sked_Min_Shift_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Min_Shift_Start_Date__c</fullName>
    <label>Min Shift Start Date</label>
    <type>Date</type>
</CustomField>