force-app/main/default/objects/sked_Drive__c/fields/sked_Need_To_Notified__c.field-meta.xml
<CustomField>
    <fullName>sked_Need_To_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need to Notified</label>
    <type>Checkbox</type>
</CustomField>