force-app/main/default/objects/sked_Drive__c/fields/sked_Notification_At__c.field-meta.xml
<CustomField>
    <fullName>sked_Notification_At__c</fullName>
    <formula>sked_Max_Shift_End__c + ( $Setup.sked_Admin_Setting__c.sked_Drive_Notification_After__c /24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification At</label>
    <type>DateTime</type>
</CustomField>