force-app/main/default/objects/sked_Drive__c/fields/sked_Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>sked_Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>