force-app/main/default/objects/sked_Drive__c/fields/sked_Open_to_Public__c.field-meta.xml
<CustomField>
    <fullName>sked_Open_to_Public__c</fullName>
    <label>Open to Public?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>